# lab06dz

./: CMakeLists.txt  LICENSE.rtf  README.md
.github/workflows/: build-release.yml  build.yml  release.yml
cmake/: WIX.template.in
include/: solver.h
src/: main.cpp
wix/: installer.wxs
